@@ -1,15 +1,15 @@
 package com.fmss.userservice.service;
 
-import com.fmss.userservice.mail.MailingService;
+import com.fmss.commondata.util.JwtUtil;
 import com.fmss.userservice.exeption.RestException;
-import com.fmss.userservice.jwt.JwtTokenUtil;
-import com.fmss.userservice.request.UserRegisterRequestDto;
+import com.fmss.userservice.exeption.UserAlreadyExistException;
+import com.fmss.userservice.mail.MailingService;
+import com.fmss.userservice.model.LdapUser;
 import com.fmss.userservice.model.User;
 import com.fmss.userservice.repository.LdapRepository;
 import com.fmss.userservice.repository.UserRepository;
-import com.fmss.userservice.model.LdapUser;
+import com.fmss.userservice.request.UserRegisterRequestDto;
 import com.fmss.userservice.security.EcommerceUserDetailService;
-import com.google.common.primitives.Longs;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang.StringUtils;
@@ -23,16 +23,14 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import javax.naming.InvalidNameException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.util.Optional;
 import java.util.Random;
 
+import static com.fmss.userservice.constants.UserConstants.*;
 import static com.fmss.userservice.util.AppSettingsKey.CREATE_PASSWORD_URL_FORMAT;
 import static com.fmss.userservice.util.AppSettingsKey.RESET_PASSWORD_URL_FORMAT;
-import static com.fmss.userservice.util.Validations.ERR_INVALID_FORGOT_PASSWORD_TOKEN;
 
 
 @Service
@@ -44,13 +42,13 @@ public class UserService {
     @Lazy
     private final PasswordEncoder passwordEncoder;
     private final MailingService mailingService;
-    private final JwtTokenUtil jwtTokenUtil;
+    private final JwtUtil jwtTokenUtil;
 
     private final LdapRepository ldapRepository;
-    
+
     private final RedisTemplate<String, Object> redisTemplate;
 
-    //    @PostConstruct
+    //@PostConstruct
     public void init() throws InvalidNameException {
 //        final var ldapUser = new LdapUser();
 //        //ldapUser.setId(new LdapName("uid=sercan1,o=64346c9136393df65a68908f,dc=jumpcloud,dc=com"));
@@ -63,15 +61,15 @@ public class UserService {
 //        ldapRepository.create(ldapUser);
 //        var user = ldapRepository.findUser("sercan@a.com");
 //        System.out.println(user);
-//        sendForgotPasswordMail("muhammed.alagoz@fmsstech.com");
+        sendForgotPasswordMail("muhammed.alagoz@fmsstech.com");
     }
 
     @Transactional
     public void registerUser(UserRegisterRequestDto userRegisterRequestDto) {
         if (existByEmail(userRegisterRequestDto.email())) {
-          // throw userAlreadyException
+            log.info("registerUser() method generate user already exist :{}", userRegisterRequestDto.userName());
+            throw new UserAlreadyExistException("User already exist");
         }
-
         final var user = userRegisterRequestDto.toUser();
         user.setUserPassword(passwordEncoder.encode(userRegisterRequestDto.password()));
         ldapRepository.create(user);
@@ -84,14 +82,16 @@ public class UserService {
 
     public void sendForgotPasswordMail(String username) {
         final var ldapUser = ldapRepository.findUser(username);
+        log.info("sendForgetLink(userName) method entry :{}", username);
         final String link = createForgotPasswordLink(ldapUser);
+        log.info("password forget link method entry :{}", link.isEmpty());
         mailingService.sendForgotPasswordEmail(ldapUser.getMail(), ldapUser.getGivenName(), ldapUser.getSn(), link);
     }
 
     @Transactional
     public User getById(Long id) {
         return userRepository.findById(id)
-                .orElseThrow(() -> new UsernameNotFoundException(Validations.CUSTOMER_ID_INVALID));
+                .orElseThrow(() -> new UsernameNotFoundException(CUSTOMER_ID_INVALID));
     }
 
     @Transactional
@@ -102,11 +102,11 @@ public class UserService {
 
     @Transactional(readOnly = true)
     public EcommerceUserDetailService getUserByForgotPasswordToken(String uid, String token) {
-        final User user = getUserByEncodedUserId(uid);
-        if (!StringUtils.equals(token, user.generateResetPasswordToken())) {
-            throw new RestException(ERR_INVALID_FORGOT_PASSWORD_TOKEN);
+        final LdapUser ldapUser = getUserByEncodedUserId(uid);
+        if (!StringUtils.equals(token, ldapUser.generateResetPasswordToken())) {
+            throw new RestException(INVALID_TOKEN);
         }
-        return null;//TODO new EcommerceUserDetailService(user);
+        return new EcommerceUserDetailService(ldapUser);
     }
 
 
@@ -117,23 +117,22 @@ public class UserService {
 
 
     @Transactional
-    public void changePassword(Long userId, String currentPassword, String newPassword) {
-        final Optional<User> userOptional = userRepository.findById(userId);
-        final User user = userOptional.orElseThrow(() -> new RestException("error.userNotFoundById"));
-        if (passwordEncoder.matches(currentPassword, user.getPassword())) {
-            changeUserPassword(user, newPassword);
+    public void changePassword(String email, String currentPassword, String newPassword) {
+        final var ldapUser = ldapRepository.findUser(email);
+        if (passwordEncoder.matches(currentPassword, ldapUser.getUserPassword())) {
+            changeUserPassword(ldapUser, newPassword);
         } else {
-            throw new RestException("error.currentPasswordNotMatch");
+            throw new RestException(CURRENT_AND_BEFORE_PASSWORD_NOT_MATCH);
         }
     }
 
     @Transactional
     public EcommerceUserDetailService getUserByCreatePasswordToken(String uid, String token) {
-        final User user = getUserByEncodedUserId(uid);
+        final LdapUser user = getUserByEncodedUserId(uid);
         if (!StringUtils.equals(token, user.generateCreatePasswordToken())) {
-            throw new RestException("error.createPasswordTokenInvalid");
+            throw new RestException(INVALID_TOKEN);
         }
-        return null;//TODO new EcommerceUserDetailService(user);
+        return new EcommerceUserDetailService(user);
     }
 
     @Transactional
@@ -141,27 +140,26 @@ public class UserService {
         changePassword(uid, password);
     }
 
-    private User getUserByEncodedUserId(String encodedUserId) {
+    private LdapUser getUserByEncodedUserId(String encodedUserId) {
         try {
-            final byte[] bytes = Base64.decodeBase64(URLDecoder.decode(encodedUserId, StandardCharsets.UTF_8.name()));
-            final long userIdLong = Longs.fromByteArray(bytes);
-            final Optional<User> userOptional = userRepository.findById(userIdLong);
-            return userOptional.orElseThrow(() -> new RestException(ERR_INVALID_FORGOT_PASSWORD_TOKEN));
-        } catch (UnsupportedEncodingException e) {
-            throw new RestException(ERR_INVALID_FORGOT_PASSWORD_TOKEN, e);
+            final byte[] bytes = Base64.decodeBase64(URLDecoder.decode(encodedUserId, StandardCharsets.UTF_8));
+            final var userIdLong = new String(bytes, StandardCharsets.UTF_8);
+            return ldapRepository.findUser(userIdLong);
+        } catch (Exception e) {
+            throw new RestException(INVALID_TOKEN, e);
         }
     }
 
     private void changePassword(String encodedUserId, String password) {
-        final User user = getUserByEncodedUserId(encodedUserId);
+        final LdapUser user = getUserByEncodedUserId(encodedUserId);
+        log.info("user change password  entry:{}", user.getMail());
         changeUserPassword(user, password);
     }
 
-    private void changeUserPassword(User user, String password) {
-        final String currentPassword = user.getPassword();
-        user.setBeforePassword(currentPassword);
-        user.setPassword(passwordEncoder.encode(password));
-        userRepository.saveAndFlush(user);
+    private void changeUserPassword(LdapUser user, String password) {
+        log.info("user create forgot password link :{}", user.getMail());
+        user.setUserPassword(passwordEncoder.encode(password));
+        ldapRepository.updateUserPassword(user.getMail(), user.getUserPassword());
     }
 
     private String createNewUserPasswordLink(LdapUser ldapUser) {
@@ -174,11 +172,12 @@ public class UserService {
     }
 
     private String createBase64UserUid(LdapUser ldapUser) {
-        return Base64.encodeBase64URLSafeString(ldapUser.getUid().getBytes());
+        return Base64.encodeBase64URLSafeString(ldapUser.getMail().getBytes());
     }
 
     private String createForgotPasswordLink(LdapUser user) {
         final String token = user.generateResetPasswordToken();
+        log.info("user create forgot password link :{}", user.getUid());
         String url = null;
         if (StringUtils.isEmpty(url)) {
             url = "http://localhost:3000";
@@ -187,10 +186,12 @@ public class UserService {
     }
 
     public boolean validateToken(String token, UserDetails userDetails) {
+        log.info("validate otp token entry :{}", userDetails.getUsername());
         return jwtTokenUtil.validateToken(token, userDetails.getUsername());
     }
 
     private String generateOtpToken(LdapUser user) {
+        log.info("generate otp token entry :{}", user.getUid());
         final var random = new Random();
         final var randomNumber = random.nextInt(900000) + 100000;
         redisTemplate.opsForValue().set(user.getUid() + OTP_REDIS_KEY, String.valueOf(randomNumber), Duration.ofMinutes(2));
@@ -198,12 +199,14 @@ public class UserService {
     }
 
     public void sentOtp(String email) {
+        log.info("user send otp mothod entry :{}", email);
         final var ldapUser = ldapRepository.findUser(email);
         final String otp = generateOtpToken(ldapUser);
         mailingService.sendOtpEmail(ldapUser.getMail(), ldapUser.getGivenName(), ldapUser.getSn(), otp);
     }
 
     public boolean verifyOtp(String email, String otp) {
+        log.info("user verify otp mothod entry :{}", email);
         try {
             final var user = ldapRepository.findUser(email);
             String sessionOtp = (String) redisTemplate.opsForValue().get(user.getUid() + OTP_REDIS_KEY);
